@@ -1,3 +1,13 @@
+Mon Feb  4 14:33:37 2002  David Helder  <dhelder@umich.edu>
+
+	* src/tcp.c (gnet_tcp_socket_server_accept_async): Fix warning.
+	* src/socks-private.c (gnet_private_socks_tcp_socket_server_accept_async): "
+	* src/server.c (server_accept_cb): "
+
+	* configure.ac: Cleaned up debug flag handling.  'minimum'
+	   debug flags is set by default
+	* autogen.sh (conf_flags): debug=yes for developers
+
 Fri Feb  1 19:37:25 2002  David Helder  <dhelder@umich.edu>
 
 	* src/iochannel.c (gnet_io_channel_read_async_cancel): Don't call
